<?xml version="1.0" encoding="utf-8"?>
<resources>

	<!-- Application -->
	<string name="app_name">Moving Estimator</string>
	<string name="action_settings">Settings</string>
	
	<!-- Action Bar -->
	<string name="actionbar_title_list">Customer List</string>
	<string name="actionbar_title_customer_info">Customer Information</string>
	<string name="actionbar_title_estimate">Estimate</string>
	
	<!-- Empty List -->
	<string name="customerlist_empty">No customer exists.</string>
	<string name="roomlist_empty">No room registered.</string>
	<string name="estimatelist_empty">No item in this room.</string>
	<string name="estimate_overview_empty">No item registered.</string>
	<string name="modelist_empty">No item registered.</string>
	
	<!-- Menu Items -->
	<string name="menuitem_new">New</string>	
	<string name="menuitem_delete">Delete</string>
	<string name="menuitem_edit">Edit</string>
	<string name="menuitem_estimate">Estimate</string>
	<string name="menuitem_report">Send Data</string>
	<string name="menuitem_getlocation">Get Location</string>
	<string name="menuitem_about">About</string>
	<string name="menuitem_new_room">New Room</string>
	<string name="menuitem_new_item">Add Item</string>
	<string name="menuitem_edit_estimate">Edit Estimate</string>
	<string name="menuitem_settings">Settings</string>
	
	<!-- Date/time picker -->
	<string name="set_date">Set date</string>
	<string name="set_time">Set time</string>
	
	<!-- Add dialog -->
	<string name="invalid_room">Invalid room</string>
	<string name="add_new_room">Adding a room</string>
	<string name="add">Add</string>
	<string name="add_new_item">Adding an item</string>
	
	<!-- Delete dialog -->
	<string name="deleting">"Deleting"</string>
	<string name="items">"item(s)"</string>
	<string name="are_you_sure">Are you sure?</string>
	<string name="delete_room">Deleting the checked room</string>
	<string name="deleting_this_customer">Deleting this customer</string>
	
	<!-- Spinner Prefix -->
	<string-array name="prefixes">
		<item>Mr.</item>
		<item>Ms.</item>
		<item>Miss</item>
		<item>Mrs.</item>
	</string-array>
	
	<!-- Estimate Report -->
	<string name="estimate_report_subject">ESTIMATE | %1$s</string>
	<string name="send_report">Send estimate data</string>
	
	<string name="customer_info">
		\nName : %1$s
		\nOrganization : %2$s
		\nEmail : %3$s
		\nHome : %4$s
		\nWork : %5$s
		\nCell : %6$s
		\n
	</string>
	
	<string name="moving_info">
		\nFrom : %1$s
		\nTo : %2$s
		
		\nDate : %3$s
		\n
		\nSchedule : %4$s
		\n
		\n-------------------------------
		\nHome Description
		\n-------------------------------
		\n %5$s
		\n
		\n-------------------------------
		\nSpecial Order
		\n-------------------------------
		\n %6$s
		\n
		\n-------------------------------
		\nGeneral Comment
		\n-------------------------------
		\n %7$s
		\n
	</string>
	
	<!-- UI widgets -->
	<string name="ref_number">Ref#</string>
	<string name="reference_number">Reference number</string>
	<string name="name">Name</string>
	<string name="last_name_first_name_prefix">Last name, First name, Prefix</string>
	<string name="last_name">Last name</string>
	<string name="first_name">First name</string>
	<string name="organization">Organization</string>
	<string name="org">Org</string>
	<string name="email">E-mail</string>
	<string name="home">Home</string>
	<string name="work">Work</string>
	<string name="cell">Cell</string>
	<string name="phone_number">Phone Number</string>
	<string name="phone_home">Phone(Home)</string>
	<string name="phone_work">Phone(Work)</string>
	<string name="phone_cell">Phone(Cell)</string>
	<string name="moving_information">Moving Information</string>
	<string name="from">From</string>
	<string name="to">To</string>
	<string name="comment">Comment</string>
	<string name="moving_date">Moving date</string>
	<string name="comment_on_schedule">Comment on schedule</string>
	<string name="home_description">Home description</string>
	<string name="special_order">Special order</string>
	<string name="general_comment">General comment</string>
	
	<!-- AboutDialog -->
	<string name="aboutdialog_text">
		DEVELOPER
		\n----------------------------------------
		\nMasatoshi Nishiguchi
		\nmasatoshi.nishiguchi@udc.edu
		\nversion: 1.3
	</string>
	
	<!-- Estimate Overview -->
	<string name="cu_ft"></string>
	<string name="total_volume_">TOTAL VOLUME:</string>
	
	<!-- Transport Mode -->
	<string-array name="transport_modes">
		<item>Ocean1</item>
		<item>Ocean2</item>
		<item>Air1</item>
		<item>Air2</item>
		<item>Local1</item>
		<item>Local2</item>
		<item>Disposal</item>
		<item>Storage</item>
	</string-array>
	
	<!-- Default Rooms -->
	<string-array name="rooms_default">
		<item>Entrance Hall</item>
		<item>Living Room</item>
		<item>Dining Room</item>
		<item>Kitchen</item>
	</string-array>
		
	<!-- Room Names -->
	<string-array name="rooms">
		<item>Attic</item>
		<item>Back Yard</item>
		<item>Basement</item>
		<item>Bathroom</item>
		<item>Bedroom1</item>
		<item>Bedroom2</item>
		<item>Bedroom3</item>
		<item>Bedroom4</item>
		<item>Cellar</item>
		<item>Closet</item>
		<item>Den</item>
		<item>Dining room</item>
		<item>Entrance Hall</item>
		<item>Foyer</item>
		<item>Front Yard</item>
		<item>Garage</item>
		<item>Hall</item>
		<item>Hallway</item>
		<item>Kitchen</item>
		<item>Laundry</item>
		<item>Living Room</item>
		<item>Master Bedroom</item>
		<item>Office</item>
		<item>Pantry</item>
		<item>Patio</item>
		<item>Playroom</item>
		<item>Porch</item>
		<item>Shed</item>
		<item>Staircase</item>
		<item>Storage Area</item>
		<item>Study</item>
		<item>Sun Room</item>
		<item>TV Room</item>
		<item>Workshop</item>
	</string-array>
	
	<!-- Moving Items -->
	<string-array name="moving_items">
		<!-- Carton box -->
		<item>S Carton</item>
		<item>M Carton</item>
		<item>L Carton</item>
		<item>MM Carton</item>
		<item>Golf Carton</item>
		<item>Wardrobe Carton</item>
		<item>Custom Carton</item>

		<!-- household items -->
		<item>Sofa</item>
		<item>Armcharir</item>
		<item>Ottoman</item>
		<item>Folding Table</item>
		<item>Folding Chair</item>
		<item>Coffee Table</item>
		<item>Side Table</item>
		<item>Display Shelf</item>
		<item>Sideboard</item>
		<item>China Cabinet</item>
		<item>Dining Table</item>
		<item>Dining Chair</item>
		<item>High Chair</item>
		<item>Garden Table</item>
		<item>Garden Chair</item>
		<item>Chest of Drawers</item>
		<item>Dresser</item>
		<item>Mirror</item>
		<item>Floor lamp</item>
		<item>TV</item>
		<item>Entertainment Center</item>
		<item>DVD Player</item>
		<item>CD</item>
		<item>DVD</item>
		<item>Audio Player</item>
		<item>Speaker</item>
		<item>Desktop PC</item>
		<item>Laptop</item>
		<item>Printer</item>
		<item>Scanner</item>
		<item>Clothing</item>
		<item>Stackable Drawer</item>
		<item>3-drawer cabinet</item>
		<item>Pipe Cloting Rack</item>
		<item>Towels</item>
		<item>Pants Press</item>
		<item>Shoe Rack</item>
		<item>Shoes</item>
		<item>Bags</item>
		<item>Handbags</item>
		<item>Picture Frame</item>
		<item>Photo Frame</item>
		<item>Poster Frame</item>
		<item>Decorative Frame</item>
		<item>Hina Ningo</item>
		<item>Gogatsu Ningyo</item>
		<item>Ornaments</item>
		<item>Dolls</item>
		<item>Xmas Tree</item>
		<item>Books</item>
		<item>Documents</item>
		<item>Files</item>
		<item>Desk Lamp</item>
		<item>Microwave</item>
		<item>3-tier Shelf</item>
		<item>4-tier Shelf</item>
		<item>5-tier Shelf</item>
		<item>Wall Shelf</item>
		<item>Sewing Machine</item>
		<item>Sewing Supplies</item>
		<item>Vacuum Cleaner</item>
		<item>Iron w/ Iron Board</item>
		<item>Rice Cooker</item>
		<item>Telephone</item>
		<item>King Bed</item>
		<item>Queen Bed</item>
		<item>Double/Full Bed</item>
		<item>Single/Twin Bed</item>
		<item>Headboard</item>
		<item>Footboard</item>
		<item>Bunk Bed</item>
		<item>Baby Crib</item>
		<item>Futon</item>
		<item>Desk</item>
		<item>Chair</item>
		<item>PC Desk</item>
		<item>Bookshelf</item>
		<item>Upright Piano</item>
		<item>Electronic Piano</item>
		<item>Electronic Keyboard</item>
		<item>Golf Set</item>
		<item>Ski</item>
		<item>Ski Boots</item>
		<item>Snowboard</item>
		<item>Surfboard</item>
		<item>Bicycle</item>
		<item>Folding Bicycle</item>
		<item>Toy</item>
		<item>Suitcase</item>
		<item>Rug</item>
		<item>Carpet</item>
		<item>Mat</item>
		<item>China</item>
		<item>Cooking Pots</item>
		<item>Cooking Utensils</item>
		<item>Cooking Supplies</item>
		<item>Silverware</item>
		<item>Glassware</item>
		<item>Food Containers</item>
		<item>Rocking Chair</item>
		<item>Bean Bag</item>
		<item>Recliner</item>
		<item>Stool</item>
		<item>Bench</item>
		<item>Couch</item>
		<item>Love Seat</item>
		<item>Hammock</item>
		<item>Mattress</item>
		<item>Sofa Bed</item>
		<item>Billiard Table</item>
		<item>Chess Table</item>
		<item>Video Game Console</item>
		<item>Kotatsu</item>
		<item>Coffee Table</item>
		<item>Workbench</item>
		<item>Nightstand</item>
		<item>Safe</item>
		<item>Wine Rack</item>
		<item>Beddings</item>
		<item>Cushions</item>
		<item>Curtains</item>
		<item>File Cabinet</item>
		<item>Stationary</item>
		<item>Cleaning Supplies</item>
		<item>Bath Supplies</item>
	</string-array>
	
	<!-- Others -->
	<string name="item_name">Item Name</string>
	<string name="size">Size</string>
	<string name="quantity">Quantity</string>
	<string name="mode">Mode</string>
	<string name="qty">Qty</string>
	<string name="room">Room</string>
	<string name="subtotal">Subtotal</string>
	<string name="invalid_password">Invalid password</string>
	<string name="enter_your_password">"Enter your password "</string>
	<string name="submit">Submit</string>
	<string name="new_password">"New Password : %1$s"</string>
	<string name="change_password">Change Password</string>
	<string name="current_password">"Currently : %1$s"</string>
	<string name="change">Change</string>
	<string name="tbd">TBD</string>
	<string name="actionbar_edit">"%1$s | EDIT"</string>
	<string name="actionbar_estimate">"%1$s | ESTIMATE"</string>
	<string name="actionbar_estimate_edit">"%1$s | ESTIMATE | EDIT"</string>
	<string name="no_customer_with_this_id_found">No customer with this id found.</string>
	<string name="couldnt_delete_photo">Couldn\'t delete the photo</string>
	<string name="toast_deleted_customer">"%1$s deleted"</string>
	<string name="couldnt_delete_customer">Couldn\'t delete the customer</string>
	<string name="error_loading_customers">Error loading customers.</string>
	<string name="error_saving_customers">Error saving customers.</string>
	<string name="deleting_checked_item">Deleting the checked item</string>
	<string name="no_password_set">(None set)</string>

</resources>
