<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/scrollView1"
	android:layout_width="match_parent"
	android:layout_height="wrap_content" >
<LinearLayout
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_marginLeft="16dp"
	android:layout_marginRight="16dp"
	android:layout_marginTop="16dp"
	android:layout_marginBottom="16dp"
	android:orientation="vertical">
	
	<!-- Reference number -->
	<TextView
		style="?android:listSeparatorTextViewStyle"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/reference_number" />
	<EditText
		android:id="@+id/editTextRefNumber"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="16dp"
		android:layout_marginRight="16dp"
		android:hint="@string/reference_number"
		android:ems="10" />

	<!-- CustomerName -->
	<TextView
		style="?android:listSeparatorTextViewStyle"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
		android:text="@string/last_name_first_name_prefix" />
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="16dp"
		android:layout_marginRight="16dp"
		android:orientation="horizontal">

		<EditText
			android:id="@+id/editTextLastName"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="2"
			android:ems="10"
			android:hint="@string/last_name"
			android:inputType="textPersonName"/>
		<EditText
			android:id="@+id/editTextFirstName"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="2"
			android:ems="10"
			android:hint="@string/first_name"
			android:inputType="textPersonName"/>
		<Spinner
			android:id="@+id/spinnerPrefix"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1" />
	</LinearLayout>

	<!-- Organization -->
	<TextView
		style="?android:listSeparatorTextViewStyle"
		android:layout_marginTop="16dp"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/organization" />
		
	<EditText
		android:id="@+id/editTextOrganization"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="16dp"
		android:layout_marginRight="16dp"
		android:ems="10"
		android:hint="@string/organization"
		android:inputType="textPersonName"/>

	<!-- E-mail -->
	<TextView
		style="?android:listSeparatorTextViewStyle"
		android:layout_marginTop="16dp"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/email" />
	<EditText
		android:id="@+id/editTextEmail"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="16dp"
		android:layout_marginRight="16dp"
		android:ems="10"
		android:hint="@string/email"
		android:inputType="textEmailAddress" />
	
	<!-- Phone Numbers -->
	<TextView
		style="?android:listSeparatorTextViewStyle"
		android:layout_marginTop="16dp"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/phone_number" />
	
	<!-- Home -->
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="16dp"
		android:layout_marginRight="16dp"
		android:orientation="horizontal">
		<TextView
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:ems="10"
			android:text="@string/home" />
		<EditText
			android:id="@+id/editTextPhoneHome"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="5"
			android:ems="10"
			android:hint="@string/phone_home"
			android:inputType="phone" />
	</LinearLayout>
	
	<!-- Work -->
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="16dp"
		android:layout_marginRight="16dp"
		android:orientation="horizontal">
		<TextView
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:ems="10"
			android:text="@string/work" />
		<EditText
			android:id="@+id/editTextPhoneWork"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="5"
			android:ems="10"
			android:hint="@string/phone_work"
			android:inputType="phone" />
	</LinearLayout>
	
	<!-- Cell -->
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="16dp"
		android:layout_marginRight="16dp"
		android:orientation="horizontal">
		<TextView
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:ems="10"
			android:text="@string/cell" />
		<EditText
			android:id="@+id/editTextPhoneCell"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="5"
			android:ems="10"
			android:hint="@string/phone_cell"
			android:inputType="phone" />
	</LinearLayout>
	
	<!-- From -->
	<TextView
		style="?android:listSeparatorTextViewStyle"
		android:layout_marginTop="16dp"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/from" />
	<EditText
		android:id="@+id/editTextFrom"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="16dp"
		android:layout_marginRight="16dp"
		android:ems="10"
		android:hint="@string/from"
		android:inputType="textPostalAddress" />
	
	<!-- To -->
	<TextView
		style="?android:listSeparatorTextViewStyle"
		android:layout_marginTop="16dp"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/to" />
	<EditText
		android:id="@+id/editTextTo"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="16dp"
		android:layout_marginRight="16dp"
		android:ems="10"
		android:hint="@string/to"
		android:inputType="textPostalAddress" />
	
	<!-- Moving Date -->
	<TextView
		style="?android:listSeparatorTextViewStyle"
		android:layout_marginTop="16dp"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/moving_date" />
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="16dp"
		android:layout_marginRight="16dp"
		android:orientation="horizontal">
		<Button
			android:id="@+id/btnMovingDate"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:layout_marginLeft="16dp"
			android:layout_marginRight="16dp" />
		<EditText
			android:id="@+id/editTextMovingSchedule"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="2"
			android:ems="10"
			android:hint="@string/comment_on_schedule" />
	</LinearLayout>
	
	<!-- Home Description -->
	<TextView
		style="?android:listSeparatorTextViewStyle"
		android:layout_marginTop="16dp"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/home_description" />
	<EditText
		android:id="@+id/editTextHomeDescription"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="16dp"
		android:layout_marginRight="16dp"
		android:ems="10"
		android:hint="@string/home_description" />
	
	<!-- Special order -->
	<TextView
		style="?android:listSeparatorTextViewStyle"
		android:layout_marginTop="16dp"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/special_order" />
	<EditText
		android:id="@+id/editTextSpecialOrder"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="16dp"
		android:layout_marginRight="16dp"
		android:ems="10"
		android:hint="@string/special_order" />
	
	<!-- General Comment -->
	<TextView
		style="?android:listSeparatorTextViewStyle"
		android:layout_marginTop="16dp"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/general_comment" />
	<EditText
		android:id="@+id/editTextGeneralComment"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="16dp"
		android:layout_marginRight="16dp"
		android:layout_marginBottom ="32dp"
		android:ems="10"
		android:hint="@string/general_comment" />

</LinearLayout>
</ScrollView>
